--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -1,3 +1,5 @@
+<% user_decorator = current_user.to_user_decorator(self) %>
+
 <%# Search category %>
 <div class="mr-5 mb-5">
   <div class="mb-3">
@@ -9,23 +11,38 @@
     <div class="row mb-1">
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-friends" value="friends" data-label="<%= t('.search_category.friends') %>" checked>
-        <label class="form-check-label" for="category-friends" style="white-space: nowrap;"><%= t('.search_category.friends') %></label>
+        <label class="form-check-label" for="category-friends" style="white-space: nowrap;">
+          <%= t('.search_category.friends') %>
+          <span class="small text-muted"><%= user_decorator.friends_count_s %></span>
+        </label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-followers" value="followers" data-label="<%= t('.search_category.followers') %>">
-        <label class="form-check-label" for="category-followers" style="white-space: nowrap;"><%= t('.search_category.followers') %></label>
+        <label class="form-check-label" for="category-followers" style="white-space: nowrap;">
+          <%= t('.search_category.followers') %>
+          <span class="small text-muted"><%= user_decorator.followers_count_s %></span>
+        </label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-one_sided_friends" value="one_sided_friends" data-label="<%= t('.search_category.one_sided_friends') %>">
-        <label class="form-check-label" for="category-one_sided_friends" style="white-space: nowrap;"><%= t('.search_category.one_sided_friends') %></label>
+        <label class="form-check-label" for="category-one_sided_friends" style="white-space: nowrap;">
+          <%= t('.search_category.one_sided_friends') %>
+          <span class="small text-muted"><%= user_decorator.one_sided_friends_count_s %></span>
+        </label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-one_sided_followers" value="one_sided_followers" data-label="<%= t('.search_category.one_sided_followers') %>">
-        <label class="form-check-label" for="category-one_sided_followers" style="white-space: nowrap;"><%= t('.search_category.one_sided_followers') %></label>
+        <label class="form-check-label" for="category-one_sided_followers" style="white-space: nowrap;">
+          <%= t('.search_category.one_sided_followers') %>
+          <span class="small text-muted"><%= user_decorator.one_sided_followers_count_s %></span>
+        </label>
       </div>
       <div class="col-sm-12 col-md-3 form-check">
         <input class="form-check-input" type="radio" name="category" id="category-mutual_friends" value="mutual_friends" data-label="<%= t('.search_category.mutual_friends') %>">
-        <label class="form-check-label" for="category-mutual_friends" style="white-space: nowrap;"><%= t('.search_category.mutual_friends') %></label>
+        <label class="form-check-label" for="category-mutual_friends" style="white-space: nowrap;">
+          <%= t('.search_category.mutual_friends') %>
+          <span class="small text-muted"><%= user_decorator.mutual_friends_count_s %></span>
+        </label>
       </div>
     </div>
   </div>
@@ -77,9 +94,9 @@
   </datalist>
   <div id="quick-select">
     <span><%= t('.search_label.quick_select') %></span>
-    <a class="badge badge-primary mr-1" href="#">aaa</a>
-    <a class="badge badge-primary mr-1" href="#">bbb</a>
-    <a class="badge badge-primary" href="#">ccc</a>
+    <a class="badge badge-primary mr-1" href="#"></a>
+    <a class="badge badge-primary mr-1" href="#"></a>
+    <a class="badge badge-primary" href="#"></a>
   </div>
 </div>
 
