Display extra counts on search type selector

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -59,19 +59,19 @@
     <div class="row mb-1">
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="type" id="type-job" value="job" data-label="<%= t('.search_type.job') %>" checked>
-        <label class="form-check-label" for="type-job"><%= t('.search_type.job') %></label>
+        <label class="form-check-label" for="type-job"><%= t('.search_type.job') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="type" id="type-location" value="location" data-label="<%= t('.search_type.location') %>">
-        <label class="form-check-label" for="type-location"><%= t('.search_type.location') %></label>
+        <label class="form-check-label" for="type-location"><%= t('.search_type.location') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="type" id="type-url" value="url" data-label="<%= t('.search_type.url') %>">
-        <label class="form-check-label" for="type-url"><%= t('.search_type.url') %></label>
+        <label class="form-check-label" for="type-url"><%= t('.search_type.url') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="type" id="type-keyword" value="keyword" data-label="<%= t('.search_type.keyword') %>">
-        <label class="form-check-label" for="type-keyword"><%= t('.search_type.keyword') %></label>
+        <label class="form-check-label" for="type-keyword"><%= t('.search_type.keyword') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
     </div>
   </div>
