--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -1,5 +1,25 @@
 <% user_decorator = current_user.to_user_decorator(self) %>
 
+<%# Search user %>
+<div class="mb-5">
+  <div class="mb-3">
+    <span class="h5"><%= t('.search_user.title') %></span>
+    <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_user.tooltip') %>"></i>
+  </div>
+  <input type="text" id="search-user" class="form-control mb-2" list="search-user-options"
+         value="<%= current_user.screen_name %>"
+         placeholder="<%= t('.search_user.placeholder') %>"
+         style="min-width: 200px; max-width: 300px;">
+  <datalist id="search-user-options">
+  </datalist>
+  <div id="quick-select-user">
+    <span><%= t('.search_user.quick_select') %></span>
+    <a class="badge badge-primary mr-1" href="#"></a>
+    <a class="badge badge-primary mr-1" href="#"></a>
+    <a class="badge badge-primary" href="#"></a>
+  </div>
+</div>
+
 <%# Search category %>
 <div class="mr-5 mb-5">
   <div class="mb-3">
