Can switch the search user

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -32,38 +32,23 @@
     <div class="row mb-1">
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-friends" value="friends" data-label="<%= t('.search_category.friends') %>" checked>
-        <label class="form-check-label" for="category-friends" style="white-space: nowrap;">
-          <%= t('.search_category.friends') %>
-          <span class="small text-muted"><%= user_decorator.friends_count_s %></span>
-        </label>
+        <label class="form-check-label" for="category-friends" style="white-space: nowrap;"><%= t('.search_category.friends') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-followers" value="followers" data-label="<%= t('.search_category.followers') %>">
-        <label class="form-check-label" for="category-followers" style="white-space: nowrap;">
-          <%= t('.search_category.followers') %>
-          <span class="small text-muted"><%= user_decorator.followers_count_s %></span>
-        </label>
+        <label class="form-check-label" for="category-followers" style="white-space: nowrap;"><%= t('.search_category.followers') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-one_sided_friends" value="one_sided_friends" data-label="<%= t('.search_category.one_sided_friends') %>">
-        <label class="form-check-label" for="category-one_sided_friends" style="white-space: nowrap;">
-          <%= t('.search_category.one_sided_friends') %>
-          <span class="small text-muted"><%= user_decorator.one_sided_friends_count_s %></span>
-        </label>
+        <label class="form-check-label" for="category-one_sided_friends" style="white-space: nowrap;"><%= t('.search_category.one_sided_friends') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
       <div class="col-sm-12 col-md-3 form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-one_sided_followers" value="one_sided_followers" data-label="<%= t('.search_category.one_sided_followers') %>">
-        <label class="form-check-label" for="category-one_sided_followers" style="white-space: nowrap;">
-          <%= t('.search_category.one_sided_followers') %>
-          <span class="small text-muted"><%= user_decorator.one_sided_followers_count_s %></span>
-        </label>
+        <label class="form-check-label" for="category-one_sided_followers" style="white-space: nowrap;"><%= t('.search_category.one_sided_followers') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
       <div class="col-sm-12 col-md-3 form-check">
         <input class="form-check-input" type="radio" name="category" id="category-mutual_friends" value="mutual_friends" data-label="<%= t('.search_category.mutual_friends') %>">
-        <label class="form-check-label" for="category-mutual_friends" style="white-space: nowrap;">
-          <%= t('.search_category.mutual_friends') %>
-          <span class="small text-muted"><%= user_decorator.mutual_friends_count_s %></span>
-        </label>
+        <label class="form-check-label" for="category-mutual_friends" style="white-space: nowrap;"><%= t('.search_category.mutual_friends') %>&nbsp;<span class="count small text-muted"></span></label>
       </div>
     </div>
   </div>
