Use exponential backoff

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -108,7 +108,7 @@
 
 <div class="mb-5">
   <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="show-details-check">
+    <input type="checkbox" class="form-check-input" id="show-details-check" checked>
     <label class="form-check-label" for="show-details-check"><%= t('.show_details.title') %></label>
     <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.show_details.tooltip') %>"></i>
   </div>
