--- a/app/views/shared/_profile_section.html.erb
+++ b/app/views/shared/_profile_section.html.erb
@@ -152,7 +152,7 @@
       return;
     }
 
-    if (retryCount >= 3) {
+    if (retryCount >= 5) {
       return;
     }
 
@@ -169,7 +169,7 @@
       if (xhr.status === 404) {
         setTimeout(function () {
           updateProfileSection(uid, ++retryCount);
-        }, 3000);
+        }, Math.pow(2, retryCount) * 1000);
       }
     });
   }
