--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -19,9 +19,9 @@
       </div>
     </div>
 
-    <div class="small mb-3" style="word-break: break-all;">{{{description}}}</div>
+    <div class="search-response-user-details" data-uid="{{uid}}">
+      <div class="small mb-3" style="word-break: break-all;">{{{description}}}</div>
 
-    <div class="search-response-user-details">
       <div class="mb-3">
         <div class="small d-inline-block mr-3">
           <i class="fas fa-map-marker-alt text-muted"></i>
@@ -98,14 +98,27 @@
         <i class="text-muted fas fa-ellipsis-h" style="cursor: pointer;"></i>
       </div>
       <div class="dropdown-menu dropdown-menu-right">
-        <a class="dropdown-item" href="<%= egotter_url('{{screen_name}}') %>" target="_blank"><%= t('.egotter') %></a>
-        <a class="dropdown-item" href="<%= twitter_url('{{screen_name}}') %>" target="_blank"><%= t('.twitter') %></a>
-        <a class="dropdown-item" href="<%= direct_message_url(current_user.uid, '{{uid}}') %>" target="_blank"><%= t('.direct_message') %></a>
+        <a class="dropdown-item open-user-details" href="#" data-uid="{{uid}}"><i class="fas fa-book-open text-muted"></i>&nbsp;<%= t('.details') %></a>
+        <a class="dropdown-item" href="<%= egotter_url('{{screen_name}}') %>" target="_blank"><img src="<%= image_path '/egotter192.png' %>" width="16" height="16">&nbsp;<%= t('.egotter') %></a>
+        <a class="dropdown-item" href="<%= twitter_url('{{screen_name}}') %>" target="_blank"><i class="fab fa-twitter text-muted"></i>&nbsp;<%= t('.twitter') %></a>
+        <a class="dropdown-item" href="<%= direct_message_url(current_user.uid, '{{uid}}') %>" target="_blank"><i class="far fa-envelope text-muted"></i>&nbsp;<%= t('.direct_message') %></a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><%= t('.error_report') %></a>
-        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><%= t('.bug_report') %></a>
+        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><i class="fas fa-wrench text-muted"></i>&nbsp;<%= t('.fix') %></a>
+        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><i class="far fa-flag text-muted"></i>&nbsp;<%= t('.bug') %></a>
       </div>
     </div>
     <div style="position: absolute; right: 8px; bottom: 4px; color: lightgray;">{{index_number}}</div>
   </div>
 </div>
+
+<script>
+  $(function () {
+    $(document).on('click', '.open-user-details', function () {
+      var uid = $(this).data('uid');
+      if (uid) {
+        $('.search-response-user-details[data-uid="' + uid + '"]').show();
+      }
+      return false;
+    });
+  });
+</script>
