--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -28,6 +28,7 @@
 </div>
 
 <%# Search category %>
+<a id="search-category-anchor" style="display: block; position: relative; top: -60px; visibility: hidden;"></a>
 <div class="mr-5 mb-5">
   <div class="mb-3">
     <span class="h5"><%= t('.search_category.title') %></span>
@@ -61,6 +62,7 @@
 </div>
 
 <%# Search type %>
+<a id="search-type-anchor" style="display: block; position: relative; top: -60px; visibility: hidden;"></a>
 <div class="mb-5">
   <div class="mb-3">
     <span class="h5"><%= t('.search_type.title') %></span>
@@ -90,6 +92,7 @@
 </div>
 
 <%# Search label %>
+<a id="search-label-anchor" style="display: block; position: relative; top: -60px; visibility: hidden;"></a>
 <div class="mb-5">
   <div class="mb-3">
     <span class="h5"><%= t('.search_label.title') %></span>
