Rename from show_details to reduced_display

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -117,9 +117,9 @@
 
 <div class="mb-5">
   <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="show-details-check" checked>
-    <label class="form-check-label" for="show-details-check"><%= t('.show_details.title') %></label>
-    <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.show_details.tooltip') %>"></i>
+    <input type="checkbox" class="form-check-input" id="reduced-display-check" checked>
+    <label class="form-check-label" for="reduced-display-check"><%= t('.reduced_display.title') %></label>
+    <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.reduced_display.tooltip') %>"></i>
   </div>
 </div>
 
