--- a/app/views/shared/_sign_out_modal.html.erb
+++ b/app/views/shared/_sign_out_modal.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"><%= t('.negative') %></button>
-        <%= button_to t('.positive'), destroy_user_session_path, class: 'btn btn-primary', data: { method: :delete } %>
+        <%= button_to t('.positive'), destroy_user_session_path, class: 'btn btn-primary', method: :delete %>
       </div>
     </div>
   </div>
