--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -144,6 +144,7 @@
 <script>
   $(function () {
     var i18n = {
+      loading: '<%= t('.js.loading') %>',
       specify_correct_label: '<%= t('.js.specify_correct_label') %>',
       no_results_found: '<%= t('.js.no_results_found_html', app: t('app_name')) %>'
     };
