Add loading="lazy" to img tags

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -140,6 +140,7 @@
     <%= t('.search_response.html') %>
   </p>
 
+  <a id="search-response-anchor" style="display: block; position: relative; top: -60px; visibility: hidden;"></a>
   <div id="search-response"></div>
 </div>
 
