--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,11 +1,7 @@
 <%= render partial: 'shared/navbar' %>
 
 <div class="container">
-  <div class="mb-5">
-    <%= render partial: 'shared/profile_section', locals: { user: @user } %>
-  </div>
-
-  <div class="mb-5">
+  <div class="mt-3 mb-5">
     <%= render partial: 'form' %>
   </div>
 </div>
