--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -95,9 +95,11 @@
       {{/status_display}}
     </div>
 
-    <div class="profile-dropdown-menu dropdown" style="position: absolute; right: 10px; top: 8px;">
+    <div class="profile-dropdown-menu dropdown text-center" style="position: absolute; right: 2px; top: 2px;">
       <div data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="text-muted fas fa-ellipsis-h" style="cursor: pointer;"></i>
+        <div style="width: 30px; height: 30px;">
+          <i class="text-muted fas fa-ellipsis-h" style="cursor: pointer;"></i>
+        </div>
       </div>
       <div class="dropdown-menu dropdown-menu-right">
         <a class="dropdown-item expand-user-details mb-2" href="#"><i class="fas fa-expand-arrows-alt text-muted"></i>&nbsp;<%= t('.expand') %></a>
